--- a/components/blocks/Header/Header.css
+++ b/components/blocks/Header/Header.css
@@ -3,7 +3,7 @@
   background-color: var(--color-background-2);
   border: var(--border-size) solid var(--color-floating-border);
   border-radius: var(--border-radius);
-  box-shadow: 0 8px 8px var(--color-floating-shadow);
+  box-shadow: 0 8px 16px var(--color-floating-shadow);
   box-sizing: border-box;
   display: flex;
   gap: var(--gap);
