--- a/components/wrappers/Modal/Modal.css
+++ b/components/wrappers/Modal/Modal.css
@@ -15,7 +15,7 @@
   background-color: var(--color-background-1);
   border: var(--border-size) solid var(--color-floating-border);
   border-radius: var(--border-radius);
-  box-shadow: 0 16px 16px var(--color-floating-shadow);
+  box-shadow: 0 16px 32px var(--color-floating-shadow);
   box-sizing: border-box;
   margin: 0 auto;
   max-width: var(--max-width-body);
